--- a/manifest.json
+++ b/manifest.json
@@ -11,38 +11,21 @@
   },
   "server": {
     "type": "binary",
-    "entry_point": "dist/plugins-linux-x86_64",
+    "entry_point": "dist/plugins",
     "mcp_config": {
-      "command": "${__dirname}/dist/plugins-linux-x86_64",
+      "command": "${__dirname}/dist/plugins",
       "args": [],
-      "env": {},
-      "platform_overrides": {
-        "darwin": { "command": "${__dirname}/dist/plugins-darwin-arm64" },
-        "linux": { "command": "${__dirname}/dist/plugins-linux-x86_64" }
-      }
+      "env": {}
     }
   },
   "tools": [
     { "name": "plugins__search", "description": "Search the plugin registry for agents, personas, commands, tools, snippets, and packs" },
     { "name": "plugins__resolve", "description": "Resolve a plugin reference to its manifest and content" }
   ],
-  "compatibility": {
-    "platforms": ["darwin", "linux"]
-  },
   "_meta": {
     "store.tool.mcpb": {
       "scripts": {
         "build": "cargo build --release"
-      },
-      "mcp_config": {
-        "platform_overrides": {
-          "darwin-arm64": { "command": "${__dirname}/dist/plugins-darwin-arm64" },
-          "linux-arm64": { "command": "${__dirname}/dist/plugins-linux-arm64" },
-          "linux-x86_64": { "command": "${__dirname}/dist/plugins-linux-x86_64" }
-        }
-      },
-      "compatibility": {
-        "platforms": ["darwin-arm64", "linux-arm64", "linux-x86_64"]
       },
       "static_responses": {
         "tools/list": {
