--- a/manifest.json
+++ b/manifest.json
@@ -19,11 +19,21 @@
     }
   },
   "tools": [
-    { "name": "plugins__search", "description": "Search the plugin registry for agents, personas, commands, tools, snippets, and packs" },
-    { "name": "plugins__resolve", "description": "Resolve a plugin reference to its manifest and content" }
+    {
+      "name": "plugins__search",
+      "description": "Search the plugin registry for agents, personas, commands, tools, snippets, and packs"
+    },
+    {
+      "name": "plugins__resolve",
+      "description": "Resolve a plugin reference to its manifest and content"
+    }
   ],
   "compatibility": {
-    "platforms": ["darwin", "linux", "win32"]
+    "platforms": [
+      "darwin",
+      "linux",
+      "win32"
+    ]
   },
   "_meta": {
     "store.tool.mcpb": {
@@ -31,7 +41,14 @@
         "build": "cargo build --release"
       },
       "compatibility": {
-        "platforms": ["darwin-arm64", "darwin-x86_64", "linux-arm64", "linux-x86_64", "win32-arm64", "win32-x86_64"]
+        "platforms": [
+          "darwin-arm64",
+          "darwin-x86_64",
+          "linux-arm64",
+          "linux-x86_64",
+          "win32-arm64",
+          "win32-x86_64"
+        ]
       },
       "static_responses": {
         "tools/list": {
@@ -41,7 +58,9 @@
               "description": "Search the plugin registry for agents, personas, commands, tools, snippets, and packs.",
               "input_schema": {
                 "type": "object",
-                "required": ["query"],
+                "required": [
+                  "query"
+                ],
                 "properties": {
                   "query": {
                     "type": "string",
@@ -49,7 +68,14 @@
                   },
                   "plugin_type": {
                     "type": "string",
-                    "enum": ["agent", "persona", "command", "tool", "snippet", "pack"],
+                    "enum": [
+                      "agent",
+                      "persona",
+                      "command",
+                      "tool",
+                      "snippet",
+                      "pack"
+                    ],
                     "description": "Filter by plugin type"
                   },
                   "limit": {
@@ -68,14 +94,38 @@
                     "items": {
                       "type": "object",
                       "properties": {
-                        "namespace": { "type": "string", "description": "Plugin namespace (e.g., \"appcypher\")" },
-                        "name": { "type": "string", "description": "Plugin name (e.g., \"genesis\")" },
-                        "reference": { "type": "string", "description": "Full plugin reference (namespace/name)" },
-                        "description": { "type": "string", "description": "Short description" },
-                        "plugin_type": { "type": "string", "description": "Plugin type" },
-                        "latest_version": { "type": "string", "description": "Latest version" },
-                        "total_downloads": { "type": "integer", "description": "Total download count" },
-                        "star_count": { "type": "integer", "description": "Star count" }
+                        "namespace": {
+                          "type": "string",
+                          "description": "Plugin namespace (e.g., \"appcypher\")"
+                        },
+                        "name": {
+                          "type": "string",
+                          "description": "Plugin name (e.g., \"genesis\")"
+                        },
+                        "reference": {
+                          "type": "string",
+                          "description": "Full plugin reference (namespace/name)"
+                        },
+                        "description": {
+                          "type": "string",
+                          "description": "Short description"
+                        },
+                        "plugin_type": {
+                          "type": "string",
+                          "description": "Plugin type"
+                        },
+                        "latest_version": {
+                          "type": "string",
+                          "description": "Latest version"
+                        },
+                        "total_downloads": {
+                          "type": "integer",
+                          "description": "Total download count"
+                        },
+                        "star_count": {
+                          "type": "integer",
+                          "description": "Star count"
+                        }
                       }
                     },
                     "description": "Search results"
@@ -85,7 +135,10 @@
                     "description": "Number of results returned"
                   }
                 },
-                "required": ["results", "count"]
+                "required": [
+                  "results",
+                  "count"
+                ]
               }
             },
             {
@@ -93,7 +146,10 @@
               "description": "Resolve a plugin reference to its manifest and content. Supports local plugins and registry fallback.",
               "input_schema": {
                 "type": "object",
-                "required": ["reference", "plugin_type"],
+                "required": [
+                  "reference",
+                  "plugin_type"
+                ],
                 "properties": {
                   "reference": {
                     "type": "string",
@@ -101,7 +157,13 @@
                   },
                   "plugin_type": {
                     "type": "string",
-                    "enum": ["agent", "persona", "command", "tool", "snippet"],
+                    "enum": [
+                      "agent",
+                      "persona",
+                      "command",
+                      "tool",
+                      "snippet"
+                    ],
                     "description": "Type of plugin to resolve"
                   }
                 }
@@ -127,7 +189,10 @@
                   },
                   "source": {
                     "type": "string",
-                    "enum": ["local", "registry"],
+                    "enum": [
+                      "local",
+                      "registry"
+                    ],
                     "description": "Where the plugin was resolved from"
                   },
                   "path": {
@@ -143,12 +208,17 @@
                     "description": "Raw content body (for spec-based plugins, excludes frontmatter)"
                   }
                 },
-                "required": ["found", "name", "source"]
+                "required": [
+                  "found",
+                  "name",
+                  "source"
+                ]
               }
             }
           ]
         }
       }
     }
-  }
+  },
+  "documentation": "https://github.com/zerocore-ai-library/plugins-mcpb"
 }
